=========1.4.41b================
- Some segfaults fixed in case of corrupt config files.
- Persistence of options. If the option SaveSettingsOnExit is true (the default) PolyGlot now saves its options in a file whose name is given by the option SaveFile which by default is equal to the engine name, prefixex by PG_ and suffixed by ".ini".
=========1.4.39b================
- Refactoring of config file parsing
- Fix crash bug in epd-test
- Do not export Chess960. This is handled completely internally. 
- Do not export UCI_Opponent and UCI_Chess960. These are handled internally.
- PG can now also be comfortably configured through command line options (i.e. without using a config file). 
- Allow quotes in configfile (as in Fonzy Bleumer's PG). 
=========1.4.37b================
- Two new options: BookDepth and BookTreshold. BookDepth limits the number of moves the book is used and BookTreshold sets the minimum weight a book move should have.
=========1.4.36b================
- Bugfix: option = 0/1 was translated incorrectly.
- Default node count is 1.
- EOF received from the engine should now be logged correctly (i.e. after the buffer is empty).
- Bugfix: Nasty buffer overflow in the macro CONSTRUCT_ARG_STRING.
- Bugfix: pipex_writeln (win32) was logging at the wrong spot. 
- Log board when an illegal move is received. 
=========1.4.35b================
- New WbWorkAround for silly bug in WB. Depth <=1 clears the engine output window. Why should an engine not be allowed to send info at depth one?
=========1.4.34b================
- Warning: this release is less well tested as usual
- Allow spaces around "=" in "option =" commands.
- WbWorkArounds is now true by default. It decapitalizes Draw when this appears in engine option. 
- Trying to set a non existent UCI option gives an error. 
- PG will now resign in case of an illegal engine move. 
- More code has been put in "pipex".
- info strings and unrecognized info lines are relayed to the GUI.